# fullstack-todo-fastapi-react

./: README.md
backend/: .env.dev  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 323ca8aaf68b_initial_schema.py  4018b251902e_add_profile_pic_to_user.py  8494775090c8_initial_db.py  d65dc59b7a04_initial_db.py  fe573ae1149b_initial_db.py
backend/app/core/: auth.py  config.py  db.py
backend/app/models/: __init__.py  todos.py  tokens.py  users.py  utils.py
backend/app/routes/: auth.py  todos.py  users.py
backend/app/scripts/: seed.py
frontend/: .env.dev  .prettierrc  eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: api.js  api.ts  main.jsx  main.tsx
frontend/src/components/AvatarChooser/: index.tsx  style.css
frontend/src/components/Form/: index.tsx  style.css
frontend/src/components/Header/: index.jsx  index.tsx  style.css
frontend/src/components/Loader/: index.jsx  index.tsx  style.css
frontend/src/components/ProtectedRoute/: index.jsx  index.tsx
frontend/src/components/TodoForm/: index.jsx  index.tsx  style.css
frontend/src/components/UserForm/: index.jsx  index.tsx
frontend/src/contexts/: AuthContext.jsx  AuthContext.tsx
frontend/src/hooks/: useAuth.js  useAuth.ts  useRequiredAuth.ts
frontend/src/pages/CreateTodo/: index.jsx  index.tsx
frontend/src/pages/EditProfile/: index.tsx
frontend/src/pages/EditTodo/: index.jsx  index.tsx
frontend/src/services/: todoService.js  todoService.ts  userService.js  userService.ts
(+5 files in other folders)
